2023-09-17T08:11:59Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6212462395 # 1168
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-17
* notice: last 14d: unq all: 1 8
* notice: prev accum: outdated-unq outdated-all / unq all: 153 180 / 160 187
* notice: next accum: outdated-unq outdated-all / unq all: 153 180 / 161 188
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-09-17]

2023-09-15T08:13:40Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6195601263 # 1162
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-15
* notice: last 14d: unq all: 1 7
* notice: prev accum: outdated-unq outdated-all / unq all: 149 175 / 157 184
* notice: next accum: outdated-unq outdated-all / unq all: 153 180 / 160 187
* notice: prev exec diff / last date diff / accum: unq all: +3 +3 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2023-08-27 2023-08-29 2023-09-01] / [2023-09-11 2023-09-13 2023-09-15]

2023-09-09T08:12:55Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6129822108 # 1160
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-09
* notice: last 14d: unq all: 2 9
* notice: prev accum: outdated-unq outdated-all / unq all: 149 175 / 156 183
* notice: next accum: outdated-unq outdated-all / unq all: 149 175 / 157 184
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-09-09]

2023-09-07T00:50:57Z: