@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-09-17T08:11:59Z",
-  "count_outdated" : 180,
-  "uniques_outdated" : 153,
+  "timestamp" : "2023-09-18T00:48:48Z",
+  "count_outdated" : 181,
+  "uniques_outdated" : 154,
   "count" : 188,
   "uniques" : 161,
   "clones" : [
-    {
-      "timestamp": "2023-09-04T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-09-05T00:00:00Z",
       "count": 1,
